bluec-tests/tests/valid/types_longlong/multi/longlong_global_var.c
long long int l = 8589934592LL; // 2^33

long long return_l(void) {
    return l;
}

int return_l_as_int(void) {
    return l;
}