bluec-tests/tests/invalid/types_longdouble/compound_mod.c
// Can't apply %= to a float
int main(void) {
    long double f = 5.0l;
    f %= 2;
    return (int) f;
}